create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
+<section class="engine"><a href="https://mobirise.ws/g">create free website</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
 
     
 
@@ -235,7 +235,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">Проблемы с ноутбуками столь же многочисленны, как и количество моделей на рынке: <strong>Apple MacBook</strong>, <strong>Dell</strong>, <strong>HP</strong>, <strong>Asus</strong>, <strong>Acer</strong>, <strong>Lenovo</strong>,<strong> Microsoft Surface</strong> и другие.&nbsp;Но мы умеем решать все эти проблемы, например:
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">Проблемы с ноутбуками столь же многочисленны, как и количество моделей на рынке: <strong>Apple MacBook</strong>, <strong>Dell</strong>, <strong>HP</strong>, <strong>Asus</strong>, <strong>Acer</strong>, <strong>Lenovo</strong>, <strong>Toshiba</strong>,<strong> Microsoft Surface</strong> и другие.&nbsp;Но мы умеем решать все эти проблемы, например:
 <div>
 </div><div><br></div><div>Повреждения жидкостью</div><div>Ремонт или замена жесткого диска</div><div>Замена батареи</div><div>Диагностика</div><div>Ремонт LCD экрана</div><div>Увеличение или замена памяти</div><div>Восстановление данных</div><div>Установка Windows и любых программ</div><div>Удаление вирусов и другого вредоносного кода</div><div><br></div><div>Если ваш ноутбук страдает от другой проблемы - просто позвоните нам, мы проведем диагностику и найдем причину любой неисправности.
 </div><div>
@@ -312,7 +312,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Спасибо за заполнение анкеты!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="veodGPA6zJG21/BTns05btnRd90sh5d8py75luSvxhgkMvi8Tg5qvTKqBx2kqPSFS6ue6l15VZom7Qq+eGVNpH/m3VhX47IvrcU44xpH5lGCOuAAJdcmoXb6VcDJrgya" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hYvuDTsc51KeWFzqDmymT/iIzl0BHvVi8lR4eSWfkUfWhS09ehuZtZXw77DhAd4a9t047ixOuTGRsZrIXdsQI875UxT/hc1Hu6crxo6jFPJuVWebOPYquH9lTNdAjC0A" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -418,8 +418,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2018 Mobirise - все права защищены
-                </p>
+                    © 2018 BIOS77</p>
             </div>
         </div>
     </div>
