--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="Профессиональный ремонт телефонов, планшетов, ноутбуков и компьютеров">
-  <title>Сервисный центр BIOS77</title>
+  <title>Сервисный центр по ремонту телефонов, планшетов, ноутбуков и компьютеров BIOS77</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
 
     
 
@@ -312,7 +312,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Спасибо за заполнение анкеты!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XhwxeQpupa+uydtPN0yVUxHu0uGM2+cLloT4XxCFpgqK/PaH62bwxpLmDLkCtqpSR3KBBC2mXzfLXzMS27jj5UERrHJZwwSAQL2ht9MgXA/6Kn+WUhQsiULigRiGvDOk" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0mHUHDoPKhWtniee8TrgS0rYsKNRoVSlYFf4RG2RFFX7q8T5JI0D48JSfRGzhn9k20eoHn44rc5Z0V1g/AyCKzNDUt8IIstkAcUeCD0h/YSftdGrT5e5ul4iLTXcWesV" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
