create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
+<section class="engine"><a href="https://mobirise.ws/e">best website building software</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
 
     
 
@@ -310,9 +310,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">Спасибо за заполнение анкеты!</div>
+                    <div data-form-alert="" hidden="">Спасибо за ваше сообщение!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0mHUHDoPKhWtniee8TrgS0rYsKNRoVSlYFf4RG2RFFX7q8T5JI0D48JSfRGzhn9k20eoHn44rc5Z0V1g/AyCKzNDUt8IIstkAcUeCD0h/YSftdGrT5e5ul4iLTXcWesV" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Fo2xLK1P0pLpv0PLQIjBIFknJhTdvTPn84j8mQo5wtM3RshrZcyjcu8wh70IEe8dKHpCNwR/uRAjOuy+UuPO4G/5IGip28UfMHzBniwrnGN5e7OhIa/p4jhqFU3ZBOfz" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
