create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.bios77.ru">
-                         <img src="assets/images/sm-logo-thumb-96x96.png" alt="BIOS77" title="Ремонт телефонов, планшетов, нутбуков, компьютеров" style="height: 3.8rem;">
+                         <img src="assets/images/sm-logo-thumb-96x96.png" alt="BIOS77" title="Ремонт телефонов, планшетов, ноутбуков, компьютеров" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">BIOS77</a></span>
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website creator</a></section><section class="header12 cid-qPBRnHjHXd mbr-parallax-background" id="header12-0">
 
     
 
@@ -316,7 +316,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Спасибо за ваше сообщение! Мы свяжемся с вами в ближайшее время!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1VIDfa3YSLylfajCwGw6xPNre0zQHTnC2w251xwQf5N/knakjD0lq/mg0y6qi6Crtd3fHJiea+DT6leYPBUjul6+HQVRtvLGmgD3RAuQ3wy0dhxe8qvCaHDYlHu/Ld5m" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D7GtKHy0T2fGZaKzDLFpp3fbOADhGwJ8WY6Q3L8BI+sz8z0r3+fCks0/ghDxwNWZ1HTtp4GANbEkm+l2WMx43bOq0RWfwQgmjx0p+CPiZEECvoKeHriR9YiYyG6Swvb1" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
